tests/error/linear_errors/unused_expr.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(q: qubit) -> None:
13:        h(q)
           ^^^^
GuppyTypeError: Value with linear type `qubit` is not used
